added to week 3 project
